Add swagger client and test
